--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^4.10.0"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0"
